--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -1,6 +1,8 @@
 groups:
 - name: main
   jobs:
+  - unit
+  - build-binary
   - deploy-app
   - load-tests
   - validate-stage-load-test
@@ -23,235 +25,284 @@ resource_types:
     repository: mvilliger/dynatrace-resource
 
 resources:
-- name: PivotalDevOpsTutorial
+- name: music-repo
   type: git
   source:
+    uri: git@github.com:akirasoft/spring-music.git
     branch: master
-    uri: https://github.com/akirasoft/PivotalDevOpsTutorial.git
+    private_key: ((github-access-token))
+
+- name: version
+  type: semver
+  source:
+    bucket: autonomous-pipeline-music-artifacts
+    key: current-version
+    access_key_id: ((s3-access-key-id))
+    secret_access_key: ((s3-secret-access-key))
+    initial_version: 1.0.0
+
+- name: music-release
+  type: s3
+  source:
+    bucket: music-pipeline-artifacts
+    regexp: spring-music-(.*).war
+    access_key_id: ((s3-access-key-id))
+    secret_access_key: ((s3-secret-access-key))
+
 - name: PCF-Stage
   type: cf
   source:
-    api: {{pcf-stage-api}}
-    organization: {{pcf-stage-organization}}
-    username: {{stage-deploy-username}}
-    password: {{stage-deploy-password}}
+    api: ((pcf-stage-api))
+    organization: ((pcf-stage-organization))
+    username: ((stage-deploy-username))
+    password: ((stage-deploy-password))
     skip_cert_check: true
-    space: {{pcf-stage-space}}
-    current_app_name: {{pcf-stage-app-suffix}}
+    space: ((pcf-stage-space))
+    current_app_name: ((pcf-stage-app-suffix))
+
 - name: PCF-Prod
   type: cf
   source:
-    api: {{pcf-prod-api}}
-    organization: {{pcf-prod-organization}}
-    username: {{prod-deploy-username}}
-    password: {{prod-deploy-password}}
+    api: ((pcf-prod-api))
+    organization: ((pcf-prod-organization))
+    username: ((prod-deploy-username))
+    password: ((prod-deploy-password))
     skip_cert_check: true
-    space: {{pcf-prod-space}}
-    current_app_name: {{pcf-prod-app-suffix}}
+    space: ((pcf-prod-space))
+    current_app_name: ((pcf-prod-app-suffix))
+
 - name: dynatrace
   type: dynatrace-resource
   source:
-    apitoken: {{apitoken}}
-    tenanthost: {{tenanthost}}
+    apitoken: ((apitoken))
+    tenanthost: ((tenanthost))
     
 jobs:
 - name: init-dynatrace
   public: true
   plan:
-  - get: PivotalDevOpsTutorial
+  - get: music-repo
   - task: init-dynatrace-task
-    file: PivotalDevOpsTutorial/ci/tasks/init-dynatrace-task.yml
+    file: music-repo/ci/tasks/init-dynatrace-task.yml
     params: 
-      apitoken: {{apitoken}}
-      tenanthost: {{tenanthost}}
+      apitoken: ((apitoken))
+      tenanthost: ((tenanthost))
+
+- name: unit
+  plan:
+  - get: music-repo
+    trigger: true
+  - task: unit
+    file: music-repo/ci/tasks/unit.yml
+
+- name: build-binary
+  serial: true
+  plan:
+  - get: music-repo
+    passed: [unit]
+    trigger: true
+  - get: version
+    params: {bump: patch}
+  - task: build-artifact
+    file: music-repo/ci/tasks/build-artifact.yml
+    timeout: 5m
+  - put: music-release
+    params: {from: music-repo/build/libs/spring-music-.*.war}
+  - put: music-repo
+    params:
+      repository: music-repo
+      tag: version/number
+  - put: version
+    params: {file: version/number}
 
 - name: deploy-app
   serial: true
   public: true
   plan:
-  - get: PivotalDevOpsTutorial
+  - get: music-repo
     trigger: true
     params:
-      PCF_APP_SUFFIX: {{pcf-stage-app-suffix}}
-      PCF_API: {{pcf-stage-api}}
-      PCF_ORG: {{pcf-stage-organization}}
-      PCF_USER: {{stage-deploy-username}}
-      PCF_PWD: {{stage-deploy-password}}
-      PCF_SPACE: {{pcf-stage-space}}
+      PCF_APP_SUFFIX: ((pcf-stage-app-suffix))
+      PCF_API: ((pcf-stage-api))
+      PCF_ORG: ((pcf-stage-organization))
+      PCF_USER: ((stage-deploy-username))
+      PCF_PWD: ((stage-deploy-password))
+      PCF_SPACE: ((pcf-stage-space))
+  - get: version
   - put: dynatrace
     params:
-      monspecserviceenvironment: SampleJSonService/Staging
+      monspecserviceenvironment: SpringMusic/Staging
       pipelinetaskname: ConcourseDeploy
-      deployversion: v1.5
+      deployversion: version/number
   - put: PCF-Stage
     params:
-      manifest: PivotalDevOpsTutorial/app/manifest.yml
-      path: PivotalDevOpsTutorial/app
+      manifest: music-repo/app/manifest.yml
+      path: music-repo/app
 
 - name: load-tests
   serial: true
   public: true
   plan:    
-  - get: PivotalDevOpsTutorial
+  - get: music-repo
     trigger: true
     passed:
       - deploy-app
   - task: get-current-app-color
-    file: PivotalDevOpsTutorial/ci/tasks/current-app-get-info.yml      
+    file: music-repo/ci/tasks/current-app-get-info.yml      
     params:
-      PCF_APP_SUFFIX: {{pcf-stage-app-suffix}}
-      PCF_API: {{pcf-stage-api}}
-      PCF_ORG: {{pcf-stage-organization}}
-      PCF_USER: {{stage-deploy-username}}
-      PCF_PWD: {{stage-deploy-password}}
-      PCF_SPACE: {{pcf-stage-space}}
+      PCF_APP_SUFFIX: ((pcf-stage-app-suffix))
+      PCF_API: ((pcf-stage-api))
+      PCF_ORG: ((pcf-stage-organization))
+      PCF_USER: ((stage-deploy-username))
+      PCF_PWD: ((stage-deploy-password))
+      PCF_SPACE: ((pcf-stage-space))
   - task: run-load-tests
-    file: PivotalDevOpsTutorial/ci/tasks/load-tests.yml
+    file: music-repo/ci/tasks/load-tests.yml
     params:
-      PCF_APP_SUFFIX: {{pcf-stage-app-suffix}}
-      PCF_APP_DOMAIN: {{pcf-stage-app-domain}}
+      PCF_APP_SUFFIX: ((pcf-stage-app-suffix))
+      PCF_APP_DOMAIN: ((pcf-stage-app-domain))
   - task: push-dynatrace-monspec-data
-    file: PivotalDevOpsTutorial/ci/tasks/push-dynatrace-monspec-data.yml
+    file: music-repo/ci/tasks/push-dynatrace-monspec-data.yml
     params: 
-      monspecserviceenvironment: SampleJSonService/Staging
-      apitoken: {{apitoken}}
-      tenanthost: {{tenanthost}}
+      monspecserviceenvironment: SpringMusic/Staging
+      apitoken: ((apitoken))
+      tenanthost: ((tenanthost))
 
 - name: validate-stage-load-test
   serial: true
   public: true
   plan:
-  - get: PivotalDevOpsTutorial
+  - get: music-repo
     trigger: true
     passed:
       - load-tests
   - task: get-current-app-color
-    file: PivotalDevOpsTutorial/ci/tasks/current-app-get-info.yml      
+    file: music-repo/ci/tasks/current-app-get-info.yml      
     params:
-      PCF_APP_SUFFIX: {{pcf-prod-app-suffix}}
-      PCF_API: {{pcf-prod-api}}
-      PCF_ORG: {{pcf-prod-organization}}
-      PCF_USER: {{prod-deploy-username}}
-      PCF_PWD: {{prod-deploy-password}}
-      PCF_SPACE: {{pcf-prod-space}}
+      PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
+      PCF_API: ((pcf-prod-api))
+      PCF_ORG: ((pcf-prod-organization))
+      PCF_USER: ((prod-deploy-username))
+      PCF_PWD: ((prod-deploy-password))
+      PCF_SPACE: ((pcf-prod-space))
   - task: validate-via-monspec
-    file: PivotalDevOpsTutorial/ci/tasks/validate-via-monspec.yml
+    file: music-repo/ci/tasks/validate-via-monspec.yml
     params: 
-      monspeccomparison: SampleJSonService/StagingToProduction
-      apitoken: {{apitoken}}
-      tenanthost: {{tenanthost}}   
+      monspeccomparison: SpringMusic/StagingToProduction
+      apitoken: ((apitoken))
+      tenanthost: ((tenanthost))   
 
 
 - name: push-to-prod
   serial: true
   public: true
   plan:  
-  - get: PivotalDevOpsTutorial
+  - get: music-repo
     trigger: true
     passed:
       - validate-stage-load-test
   - task: get-current-app-color
-    file: PivotalDevOpsTutorial/ci/tasks/current-app-get-info.yml
+    file: music-repo/ci/tasks/current-app-get-info.yml
     params:
-      PCF_APP_SUFFIX: {{pcf-prod-app-suffix}}
-      PCF_API: {{pcf-prod-api}}
-      PCF_ORG: {{pcf-prod-organization}}
-      PCF_USER: {{prod-deploy-username}}
-      PCF_PWD: {{prod-deploy-password}}
-      PCF_SPACE: {{pcf-prod-space}}  
+      PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
+      PCF_API: ((pcf-prod-api))
+      PCF_ORG: ((pcf-prod-organization))
+      PCF_USER: ((prod-deploy-username))
+      PCF_PWD: ((prod-deploy-password))
+      PCF_SPACE: ((pcf-prod-space))  
   - task: prepare-app-manifest
-    file: PivotalDevOpsTutorial/ci/tasks/app-manifest-prep.yml
+    file: music-repo/ci/tasks/app-manifest-prep.yml
     params:
-      PCF_APP_SUFFIX: {{pcf-prod-app-suffix}}      
+      PCF_APP_SUFFIX: ((pcf-prod-app-suffix))      
   - put: dynatrace
     params:
-      monspecserviceenvironment: SampleJSonService/Production
+      monspecserviceenvironment: SpringMusic/Production
       pipelinetaskname: ConcourseDeploy
       deployversion: v1.5      
   - put: PCF-Prod
     params:
       manifest: app-manifest-output/manifest.yml
-      path: PivotalDevOpsTutorial/app
+      path: music-repo/app
 
 - name: load-tests-prod
   serial: true
   public: true
   plan:
-  - get: PivotalDevOpsTutorial
+  - get: music-repo
     trigger: true
     passed:
       - push-to-prod
   - task: get-current-app-color
-    file: PivotalDevOpsTutorial/ci/tasks/current-app-get-info.yml      
+    file: music-repo/ci/tasks/current-app-get-info.yml      
     params:
-      PCF_APP_SUFFIX: {{pcf-prod-app-suffix}}
-      PCF_API: {{pcf-prod-api}}
-      PCF_ORG: {{pcf-prod-organization}}
-      PCF_USER: {{prod-deploy-username}}
-      PCF_PWD: {{prod-deploy-password}}
-      PCF_SPACE: {{pcf-prod-space}}
+      PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
+      PCF_API: ((pcf-prod-api))
+      PCF_ORG: ((pcf-prod-organization))
+      PCF_USER: ((prod-deploy-username))
+      PCF_PWD: ((prod-deploy-password))
+      PCF_SPACE: ((pcf-prod-space))
   - task: run-load-tests
-    file: PivotalDevOpsTutorial/ci/tasks/load-tests.yml
+    file: music-repo/ci/tasks/load-tests.yml
     params:
-      PCF_APP_SUFFIX: {{pcf-prod-app-suffix}}
-      PCF_APP_DOMAIN: {{pcf-prod-app-domain}}
+      PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
+      PCF_APP_DOMAIN: ((pcf-prod-app-domain))
       PRODUCTION: true
   - task: push-dynatrace-monspec-data
-    file: PivotalDevOpsTutorial/ci/tasks/push-dynatrace-monspec-data.yml
+    file: music-repo/ci/tasks/push-dynatrace-monspec-data.yml
     params: 
-      monspecserviceenvironment: SampleJSonService/Production-$NEXT_APP_COLOR
-      apitoken: {{apitoken}}
-      tenanthost: {{tenanthost}}
+      monspecserviceenvironment: SpringMusic/Production-$NEXT_APP_COLOR
+      apitoken: ((apitoken))
+      tenanthost: ((tenanthost))
 
 - name: validate-prod-load-test
   serial: true
   public: true
   plan:
-  - get: PivotalDevOpsTutorial
+  - get: music-repo
     trigger: true
     passed:
       - load-tests-prod
   - task: get-current-app-color
-    file: PivotalDevOpsTutorial/ci/tasks/current-app-get-info.yml      
+    file: music-repo/ci/tasks/current-app-get-info.yml      
     params:
-      PCF_APP_SUFFIX: {{pcf-prod-app-suffix}}
-      PCF_API: {{pcf-prod-api}}
-      PCF_ORG: {{pcf-prod-organization}}
-      PCF_USER: {{prod-deploy-username}}
-      PCF_PWD: {{prod-deploy-password}}
-      PCF_SPACE: {{pcf-prod-space}}
+      PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
+      PCF_API: ((pcf-prod-api))
+      PCF_ORG: ((pcf-prod-organization))
+      PCF_USER: ((prod-deploy-username))
+      PCF_PWD: ((prod-deploy-password))
+      PCF_SPACE: ((pcf-prod-space))
   - task: validate-via-monspec
-    file: PivotalDevOpsTutorial/ci/tasks/validate-via-monspec.yml
+    file: music-repo/ci/tasks/validate-via-monspec.yml
     params: 
-      monspeccomparison: SampleJSonService/Production-$NEXT_APP_COLOR\ToProduction-$CURRENT_APP_COLOR\Last5m
-      apitoken: {{apitoken}}
-      tenanthost: {{tenanthost}}    
+      monspeccomparison: SpringMusic/Production-$NEXT_APP_COLOR\ToProduction-$CURRENT_APP_COLOR\Last5m
+      apitoken: ((apitoken))
+      tenanthost: ((tenanthost))    
 
 - name: promote-new-version
   serial: true
   public: true
   plan:
-  - get: PivotalDevOpsTutorial
+  - get: music-repo
     trigger: true
     passed:
       - validate-prod-load-test
   - task: get-current-app-color
-    file: PivotalDevOpsTutorial/ci/tasks/current-app-get-info.yml
+    file: music-repo/ci/tasks/current-app-get-info.yml
     params:
-      PCF_APP_SUFFIX: {{pcf-prod-app-suffix}}
-      PCF_API: {{pcf-prod-api}}
-      PCF_ORG: {{pcf-prod-organization}}
-      PCF_USER: {{prod-deploy-username}}
-      PCF_PWD: {{prod-deploy-password}}
-      PCF_SPACE: {{pcf-prod-space}}
+      PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
+      PCF_API: ((pcf-prod-api))
+      PCF_ORG: ((pcf-prod-organization))
+      PCF_USER: ((prod-deploy-username))
+      PCF_PWD: ((prod-deploy-password))
+      PCF_SPACE: ((pcf-prod-space))
   - task: switch-app-routes
-    file: PivotalDevOpsTutorial/ci/tasks/update-routes.yml
+    file: music-repo/ci/tasks/update-routes.yml
     params:
-      PCF_APP_SUFFIX: {{pcf-prod-app-suffix}}
-      PCF_APP_DOMAIN: {{pcf-prod-app-domain}}
-      PCF_API: {{pcf-prod-api}}
-      PCF_ORG: {{pcf-prod-organization}}
-      PCF_USER: {{prod-deploy-username}}
-      PCF_PWD: {{prod-deploy-password}}
-      PCF_SPACE: {{pcf-prod-space}}      
+      PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
+      PCF_APP_DOMAIN: ((pcf-prod-app-domain))
+      PCF_API: ((pcf-prod-api))
+      PCF_ORG: ((pcf-prod-organization))
+      PCF_USER: ((prod-deploy-username))
+      PCF_PWD: ((prod-deploy-password))
+      PCF_SPACE: ((pcf-prod-space))      
                  
