updating another task container

--- a/ci/tasks/unit.yml
+++ b/ci/tasks/unit.yml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: datianshi/gradle
+    repository: gradle/jdk8
     tag: "latest"
 inputs:
   - name: music-repo
