--- a/ci/tasks/build-artifact.yml
+++ b/ci/tasks/build-artifact.yml
@@ -4,7 +4,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: gradle/jdk8
+    repository: openjdk:8-jdk
     tag: "latest"
 
 
