--- a/ci/tasks/unit.yml
+++ b/ci/tasks/unit.yml
@@ -4,8 +4,9 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: gradle/jdk8
+    repository: openjdk:8-jdk
     tag: "latest"
+
 inputs:
   - name: music-repo
 
