--- a/ci/tasks/unit.yml
+++ b/ci/tasks/unit.yml
@@ -4,7 +4,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: openjdk:8-jdk
+    repository: openjdk
+    tag: "8-jdk"
 
 inputs:
   - name: music-repo
