updating s3 bucket regions

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -36,6 +36,7 @@ resources:
   type: semver
   source:
     bucket: autonomous-pipeline-music-artifacts
+    region_name: us-west-2
     key: current-version
     access_key_id: ((s3-access-key-id))
     secret_access_key: ((s3-secret-access-key))
@@ -44,7 +45,7 @@ resources:
 - name: music-release
   type: s3
   source:
-    bucket: music-pipeline-artifacts
+    bucket: autonomous-pipeline-music-artifacts
     region_name: us-west-2
     regexp: spring-music-(.*).war
     access_key_id: ((s3-access-key-id))
