pipeline changes to s3 bucket

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -109,7 +109,8 @@ jobs:
     file: music-repo/ci/tasks/build-artifact.yml
     timeout: 5m
   - put: music-release
-    params: {from: music-repo/build/libs/spring-music-.*.war}
+    params:
+      file: music-repo/build/libs/spring-music-.*.war}
   - put: music-repo
     params:
       repository: music-repo
@@ -123,6 +124,8 @@ jobs:
   plan:
   - get: music-repo
     trigger: true
+    passed: 
+      - build-binary
     params:
       PCF_APP_SUFFIX: ((pcf-stage-app-suffix))
       PCF_API: ((pcf-stage-api))
@@ -131,6 +134,7 @@ jobs:
       PCF_PWD: ((stage-deploy-password))
       PCF_SPACE: ((pcf-stage-space))
   - get: version
+  - get: music-release
   - put: dynatrace
     params:
       monspecserviceenvironment: SpringMusic/Staging
