more build changes

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -110,7 +110,7 @@ jobs:
     timeout: 5m
   - put: music-release
     params:
-      file: music-repo/build/libs/spring-music-*.jar
+      file: workspace/spring-music-*.jar
   - put: music-repo
     params:
       repository: music-repo
