--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -4,12 +4,12 @@ groups:
   - unit
   - build-binary
   - deploy-app
-  - load-tests
-  - validate-stage-load-test
-  - push-to-prod
-  - load-tests-prod
-  - validate-prod-load-test
-  - promote-new-version
+  # - load-tests
+  # - validate-stage-load-test
+  # - push-to-prod
+  # - load-tests-prod
+  # - validate-prod-load-test
+  # - promote-new-version
 - name: init
   jobs:
   - init-dynatrace
@@ -62,16 +62,16 @@ resources:
     space: ((pcf-stage-space))
     current_app_name: ((pcf-stage-app-suffix))
 
-- name: PCF-Prod
-  type: cf
-  source:
-    api: ((pcf-prod-api))
-    organization: ((pcf-prod-organization))
-    username: ((prod-deploy-username))
-    password: ((prod-deploy-password))
-    skip_cert_check: true
-    space: ((pcf-prod-space))
-    current_app_name: ((pcf-prod-app-suffix))
+# - name: PCF-Prod
+#   type: cf
+#   source:
+#     api: ((pcf-prod-api))
+#     organization: ((pcf-prod-organization))
+#     username: ((prod-deploy-username))
+#     password: ((prod-deploy-password))
+#     skip_cert_check: true
+#     space: ((pcf-prod-space))
+#     current_app_name: ((pcf-prod-app-suffix))
 
 - name: dynatrace
   type: dynatrace-resource
@@ -143,172 +143,172 @@ jobs:
   - put: PCF-Stage
     params:
       manifest: music-repo/app/manifest.yml
-      path: music-repo/app
+      path: music-release/spring-music-*.jar
 
-- name: load-tests
-  serial: true
-  public: true
-  plan:    
-  - get: music-repo
-    trigger: true
-    passed:
-      - deploy-app
-  - task: get-current-app-color
-    file: music-repo/ci/tasks/current-app-get-info.yml      
-    params:
-      PCF_APP_SUFFIX: ((pcf-stage-app-suffix))
-      PCF_API: ((pcf-stage-api))
-      PCF_ORG: ((pcf-stage-organization))
-      PCF_USER: ((stage-deploy-username))
-      PCF_PWD: ((stage-deploy-password))
-      PCF_SPACE: ((pcf-stage-space))
-  - task: run-load-tests
-    file: music-repo/ci/tasks/load-tests.yml
-    params:
-      PCF_APP_SUFFIX: ((pcf-stage-app-suffix))
-      PCF_APP_DOMAIN: ((pcf-stage-app-domain))
-  - task: push-dynatrace-monspec-data
-    file: music-repo/ci/tasks/push-dynatrace-monspec-data.yml
-    params: 
-      monspecserviceenvironment: SpringMusic/Staging
-      apitoken: ((apitoken))
-      tenanthost: ((tenanthost))
+# - name: load-tests
+#   serial: true
+#   public: true
+#   plan:    
+#   - get: music-repo
+#     trigger: true
+#     passed:
+#       - deploy-app
+#   - task: get-current-app-color
+#     file: music-repo/ci/tasks/current-app-get-info.yml      
+#     params:
+#       PCF_APP_SUFFIX: ((pcf-stage-app-suffix))
+#       PCF_API: ((pcf-stage-api))
+#       PCF_ORG: ((pcf-stage-organization))
+#       PCF_USER: ((stage-deploy-username))
+#       PCF_PWD: ((stage-deploy-password))
+#       PCF_SPACE: ((pcf-stage-space))
+#   - task: run-load-tests
+#     file: music-repo/ci/tasks/load-tests.yml
+#     params:
+#       PCF_APP_SUFFIX: ((pcf-stage-app-suffix))
+#       PCF_APP_DOMAIN: ((pcf-stage-app-domain))
+#   - task: push-dynatrace-monspec-data
+#     file: music-repo/ci/tasks/push-dynatrace-monspec-data.yml
+#     params: 
+#       monspecserviceenvironment: SpringMusic/Staging
+#       apitoken: ((apitoken))
+#       tenanthost: ((tenanthost))
 
-- name: validate-stage-load-test
-  serial: true
-  public: true
-  plan:
-  - get: music-repo
-    trigger: true
-    passed:
-      - load-tests
-  - task: get-current-app-color
-    file: music-repo/ci/tasks/current-app-get-info.yml      
-    params:
-      PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
-      PCF_API: ((pcf-prod-api))
-      PCF_ORG: ((pcf-prod-organization))
-      PCF_USER: ((prod-deploy-username))
-      PCF_PWD: ((prod-deploy-password))
-      PCF_SPACE: ((pcf-prod-space))
-  - task: validate-via-monspec
-    file: music-repo/ci/tasks/validate-via-monspec.yml
-    params: 
-      monspeccomparison: SpringMusic/StagingToProduction
-      apitoken: ((apitoken))
-      tenanthost: ((tenanthost))   
+# - name: validate-stage-load-test
+#   serial: true
+#   public: true
+#   plan:
+#   - get: music-repo
+#     trigger: true
+#     passed:
+#       - load-tests
+#   - task: get-current-app-color
+#     file: music-repo/ci/tasks/current-app-get-info.yml      
+#     params:
+#       PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
+#       PCF_API: ((pcf-prod-api))
+#       PCF_ORG: ((pcf-prod-organization))
+#       PCF_USER: ((prod-deploy-username))
+#       PCF_PWD: ((prod-deploy-password))
+#       PCF_SPACE: ((pcf-prod-space))
+#   - task: validate-via-monspec
+#     file: music-repo/ci/tasks/validate-via-monspec.yml
+#     params: 
+#       monspeccomparison: SpringMusic/StagingToProduction
+#       apitoken: ((apitoken))
+#       tenanthost: ((tenanthost))   
 
 
-- name: push-to-prod
-  serial: true
-  public: true
-  plan:  
-  - get: music-repo
-    trigger: true
-    passed:
-      - validate-stage-load-test
-  - task: get-current-app-color
-    file: music-repo/ci/tasks/current-app-get-info.yml
-    params:
-      PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
-      PCF_API: ((pcf-prod-api))
-      PCF_ORG: ((pcf-prod-organization))
-      PCF_USER: ((prod-deploy-username))
-      PCF_PWD: ((prod-deploy-password))
-      PCF_SPACE: ((pcf-prod-space))  
-  - task: prepare-app-manifest
-    file: music-repo/ci/tasks/app-manifest-prep.yml
-    params:
-      PCF_APP_SUFFIX: ((pcf-prod-app-suffix))      
-  - put: dynatrace
-    params:
-      monspecserviceenvironment: SpringMusic/Production
-      pipelinetaskname: ConcourseDeploy
-      deployversion: v1.5      
-  - put: PCF-Prod
-    params:
-      manifest: app-manifest-output/manifest.yml
-      path: music-repo/app
+# - name: push-to-prod
+#   serial: true
+#   public: true
+#   plan:  
+#   - get: music-repo
+#     trigger: true
+#     passed:
+#       - validate-stage-load-test
+#   - task: get-current-app-color
+#     file: music-repo/ci/tasks/current-app-get-info.yml
+#     params:
+#       PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
+#       PCF_API: ((pcf-prod-api))
+#       PCF_ORG: ((pcf-prod-organization))
+#       PCF_USER: ((prod-deploy-username))
+#       PCF_PWD: ((prod-deploy-password))
+#       PCF_SPACE: ((pcf-prod-space))  
+#   - task: prepare-app-manifest
+#     file: music-repo/ci/tasks/app-manifest-prep.yml
+#     params:
+#       PCF_APP_SUFFIX: ((pcf-prod-app-suffix))      
+#   - put: dynatrace
+#     params:
+#       monspecserviceenvironment: SpringMusic/Production
+#       pipelinetaskname: ConcourseDeploy
+#       deployversion: v1.5      
+#   - put: PCF-Prod
+#     params:
+#       manifest: app-manifest-output/manifest.yml
+#       path: music-repo/app
 
-- name: load-tests-prod
-  serial: true
-  public: true
-  plan:
-  - get: music-repo
-    trigger: true
-    passed:
-      - push-to-prod
-  - task: get-current-app-color
-    file: music-repo/ci/tasks/current-app-get-info.yml      
-    params:
-      PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
-      PCF_API: ((pcf-prod-api))
-      PCF_ORG: ((pcf-prod-organization))
-      PCF_USER: ((prod-deploy-username))
-      PCF_PWD: ((prod-deploy-password))
-      PCF_SPACE: ((pcf-prod-space))
-  - task: run-load-tests
-    file: music-repo/ci/tasks/load-tests.yml
-    params:
-      PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
-      PCF_APP_DOMAIN: ((pcf-prod-app-domain))
-      PRODUCTION: true
-  - task: push-dynatrace-monspec-data
-    file: music-repo/ci/tasks/push-dynatrace-monspec-data.yml
-    params: 
-      monspecserviceenvironment: SpringMusic/Production-$NEXT_APP_COLOR
-      apitoken: ((apitoken))
-      tenanthost: ((tenanthost))
+# - name: load-tests-prod
+#   serial: true
+#   public: true
+#   plan:
+#   - get: music-repo
+#     trigger: true
+#     passed:
+#       - push-to-prod
+#   - task: get-current-app-color
+#     file: music-repo/ci/tasks/current-app-get-info.yml      
+#     params:
+#       PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
+#       PCF_API: ((pcf-prod-api))
+#       PCF_ORG: ((pcf-prod-organization))
+#       PCF_USER: ((prod-deploy-username))
+#       PCF_PWD: ((prod-deploy-password))
+#       PCF_SPACE: ((pcf-prod-space))
+#   - task: run-load-tests
+#     file: music-repo/ci/tasks/load-tests.yml
+#     params:
+#       PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
+#       PCF_APP_DOMAIN: ((pcf-prod-app-domain))
+#       PRODUCTION: true
+#   - task: push-dynatrace-monspec-data
+#     file: music-repo/ci/tasks/push-dynatrace-monspec-data.yml
+#     params: 
+#       monspecserviceenvironment: SpringMusic/Production-$NEXT_APP_COLOR
+#       apitoken: ((apitoken))
+#       tenanthost: ((tenanthost))
 
-- name: validate-prod-load-test
-  serial: true
-  public: true
-  plan:
-  - get: music-repo
-    trigger: true
-    passed:
-      - load-tests-prod
-  - task: get-current-app-color
-    file: music-repo/ci/tasks/current-app-get-info.yml      
-    params:
-      PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
-      PCF_API: ((pcf-prod-api))
-      PCF_ORG: ((pcf-prod-organization))
-      PCF_USER: ((prod-deploy-username))
-      PCF_PWD: ((prod-deploy-password))
-      PCF_SPACE: ((pcf-prod-space))
-  - task: validate-via-monspec
-    file: music-repo/ci/tasks/validate-via-monspec.yml
-    params: 
-      monspeccomparison: SpringMusic/Production-$NEXT_APP_COLOR\ToProduction-$CURRENT_APP_COLOR\Last5m
-      apitoken: ((apitoken))
-      tenanthost: ((tenanthost))    
+# - name: validate-prod-load-test
+#   serial: true
+#   public: true
+#   plan:
+#   - get: music-repo
+#     trigger: true
+#     passed:
+#       - load-tests-prod
+#   - task: get-current-app-color
+#     file: music-repo/ci/tasks/current-app-get-info.yml      
+#     params:
+#       PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
+#       PCF_API: ((pcf-prod-api))
+#       PCF_ORG: ((pcf-prod-organization))
+#       PCF_USER: ((prod-deploy-username))
+#       PCF_PWD: ((prod-deploy-password))
+#       PCF_SPACE: ((pcf-prod-space))
+#   - task: validate-via-monspec
+#     file: music-repo/ci/tasks/validate-via-monspec.yml
+#     params: 
+#       monspeccomparison: SpringMusic/Production-$NEXT_APP_COLOR\ToProduction-$CURRENT_APP_COLOR\Last5m
+#       apitoken: ((apitoken))
+#       tenanthost: ((tenanthost))    
 
-- name: promote-new-version
-  serial: true
-  public: true
-  plan:
-  - get: music-repo
-    trigger: true
-    passed:
-      - validate-prod-load-test
-  - task: get-current-app-color
-    file: music-repo/ci/tasks/current-app-get-info.yml
-    params:
-      PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
-      PCF_API: ((pcf-prod-api))
-      PCF_ORG: ((pcf-prod-organization))
-      PCF_USER: ((prod-deploy-username))
-      PCF_PWD: ((prod-deploy-password))
-      PCF_SPACE: ((pcf-prod-space))
-  - task: switch-app-routes
-    file: music-repo/ci/tasks/update-routes.yml
-    params:
-      PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
-      PCF_APP_DOMAIN: ((pcf-prod-app-domain))
-      PCF_API: ((pcf-prod-api))
-      PCF_ORG: ((pcf-prod-organization))
-      PCF_USER: ((prod-deploy-username))
-      PCF_PWD: ((prod-deploy-password))
-      PCF_SPACE: ((pcf-prod-space))      
+# - name: promote-new-version
+#   serial: true
+#   public: true
+#   plan:
+#   - get: music-repo
+#     trigger: true
+#     passed:
+#       - validate-prod-load-test
+#   - task: get-current-app-color
+#     file: music-repo/ci/tasks/current-app-get-info.yml
+#     params:
+#       PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
+#       PCF_API: ((pcf-prod-api))
+#       PCF_ORG: ((pcf-prod-organization))
+#       PCF_USER: ((prod-deploy-username))
+#       PCF_PWD: ((prod-deploy-password))
+#       PCF_SPACE: ((pcf-prod-space))
+#   - task: switch-app-routes
+#     file: music-repo/ci/tasks/update-routes.yml
+#     params:
+#       PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
+#       PCF_APP_DOMAIN: ((pcf-prod-app-domain))
+#       PCF_API: ((pcf-prod-api))
+#       PCF_ORG: ((pcf-prod-organization))
+#       PCF_USER: ((prod-deploy-username))
+#       PCF_PWD: ((prod-deploy-password))
+#       PCF_SPACE: ((pcf-prod-space))      
                  
