--- a/ci/tasks/build-artifact.yml
+++ b/ci/tasks/build-artifact.yml
@@ -5,11 +5,12 @@ image_resource:
   type: docker-image
   source:
     repository: openjdk
-    tag: "8-jdk"
+    tag: "8-jdk-alpine"
 
 inputs:
   - name: music-repo
   - name: version
-
+outputs:
+  - name: workspace
 run:
   path: music-repo/ci/tasks/build-artifact.sh
