--- a/ci/tasks/build-artifact.yml
+++ b/ci/tasks/build-artifact.yml
@@ -12,5 +12,10 @@ inputs:
   - name: version
 outputs:
   - name: workspace
+
+caches:
+  - path: gradle
+  #- path: maven
+
 run:
   path: music-repo/ci/tasks/build-artifact.sh
