--- a/ci/tasks/unit.yml
+++ b/ci/tasks/unit.yml
@@ -5,10 +5,12 @@ image_resource:
   type: docker-image
   source:
     repository: openjdk
-    tag: "8-jdk"
+    tag: "8-jdk-alpine"
 
 inputs:
   - name: music-repo
+caches:
+  - path: gradle
 
 run:
   path: music-repo/ci/tasks/unit.sh
