updating manifest to use buildpacks not buildpack in proper format

--- a/manifests/manifest.yml
+++ b/manifests/manifest.yml
@@ -2,7 +2,8 @@
 applications:
 - name: APPNAME
   memory: 1G
-  buildpacks: java_buildpack_offline
+  buildpacks: 
+    - java_buildpack_offline
   env:
     DT_NODE_ID: APPNAME
     DT_CUSTOM_PROP: DEPLOYMENT_GRP_NAME=SPRING-MUSIC-DTGRP DEPLOYMENT_COLOR=SPRING-MUSIC-APPCOLOR
