--- a/ci/tasks/init-dynatrace-task.yml
+++ b/ci/tasks/init-dynatrace-task.yml
@@ -8,8 +8,8 @@ image_resource:
     tag: "latest"
 
 inputs:
-- name: PivotalDevOpsTutorial
+- name: music-repo
 #- name: current-app-info
 
 run:
-  path: ./PivotalDevOpsTutorial/ci/tasks/init-dynatrace-task
+  path: ./music-repo/ci/tasks/init-dynatrace-task
