removed ALL references to old pipeline name

--- a/ci/tasks/validate-via-monspec.yml
+++ b/ci/tasks/validate-via-monspec.yml
@@ -8,8 +8,8 @@ image_resource:
     tag: "latest"
 
 inputs:
-- name: PivotalDevOpsTutorial
+- name: music-repo
 - name: current-app-info
 
 run:
-  path: ./PivotalDevOpsTutorial/ci/tasks/validate-via-monspec
+  path: ./music-repo/ci/tasks/validate-via-monspec
