--- a/ci/tasks/load-tests.yml
+++ b/ci/tasks/load-tests.yml
@@ -8,8 +8,8 @@ image_resource:
     tag: "latest"
 
 inputs:
-- name: PivotalDevOpsTutorial
+- name: music-repo
 - name: current-app-info
 
 run:
-  path: ./PivotalDevOpsTutorial/ci/tasks/load-tests
+  path: ./music-repo/ci/tasks/load-tests
