--- a/ci/tasks/update-routes.yml
+++ b/ci/tasks/update-routes.yml
@@ -9,8 +9,8 @@ image_resource:
 
 
 inputs:
-- name: PivotalDevOpsTutorial
+- name: music-repo
 - name: current-app-info
 
 run:
-  path: ./PivotalDevOpsTutorial/ci/tasks/update-routes
+  path: ./music-repo/ci/tasks/update-routes
