adding build increment

--- a/manifests/manifest.yml
+++ b/manifests/manifest.yml
@@ -8,4 +8,5 @@ applications:
     DT_NODE_ID: APPNAME
     DT_CUSTOM_PROP: DEPLOYMENT_GRP_NAME=SPRING-MUSIC-DTGRP DEPLOYMENT_COLOR=SPRING-MUSIC-APPCOLOR
     DEPLOYMENT_GRP_NAME: SPRING-MUSIC-DTGRP
-    DELAY: 0  
+    DELAY: 0
+    incrementthistoforcenewrelease: 0
