--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -5,7 +5,7 @@ groups:
   - build-binary
   - deploy-app
   - load-tests
-  # - validate-stage-load-test
+  - validate-stage-load-test
   # - push-to-prod
   # - load-tests-prod
   # - validate-prod-load-test
@@ -159,15 +159,6 @@ jobs:
     trigger: true
     passed:
       - deploy-app
-  - task: get-current-app-color
-    file: music-repo/ci/tasks/current-app-get-info.yml      
-    params:
-      PCF_APP_SUFFIX: ((pcf-stage-app-suffix))
-      PCF_API: ((pcf-stage-api))
-      PCF_ORG: ((pcf-stage-organization))
-      PCF_USER: ((stage-deploy-username))
-      PCF_PWD: ((stage-deploy-password))
-      PCF_SPACE: ((pcf-stage-space))
   - task: run-load-tests
     file: music-repo/ci/tasks/load-tests.yml
     params:
@@ -180,29 +171,20 @@ jobs:
       apitoken: ((apitoken))
       tenanthost: ((tenanthost))
 
-# - name: validate-stage-load-test
-#   serial: true
-#   public: true
-#   plan:
-#   - get: music-repo
-#     trigger: true
-#     passed:
-#       - load-tests
-#   - task: get-current-app-color
-#     file: music-repo/ci/tasks/current-app-get-info.yml      
-#     params:
-#       PCF_APP_SUFFIX: ((pcf-prod-app-suffix))
-#       PCF_API: ((pcf-prod-api))
-#       PCF_ORG: ((pcf-prod-organization))
-#       PCF_USER: ((prod-deploy-username))
-#       PCF_PWD: ((prod-deploy-password))
-#       PCF_SPACE: ((pcf-prod-space))
-#   - task: validate-via-monspec
-#     file: music-repo/ci/tasks/validate-via-monspec.yml
-#     params: 
-#       monspeccomparison: SpringMusic/StagingToProduction
-#       apitoken: ((apitoken))
-#       tenanthost: ((tenanthost))   
+- name: validate-stage-load-test
+  serial: true
+  public: true
+  plan:
+  - get: music-repo
+    trigger: true
+    passed:
+      - load-tests
+  - task: validate-via-monspec
+    file: music-repo/ci/tasks/validate-via-monspec.yml
+    params: 
+      monspeccomparison: SpringMusic/StagingToStagingLastHour
+      apitoken: ((apitoken))
+      tenanthost: ((tenanthost))   
 
 
 # - name: push-to-prod
