pipeline and sample creds update

--- a/ci/credentials-sample.yml
+++ b/ci/credentials-sample.yml
@@ -12,3 +12,10 @@ pcf-prod-space: <pcf-prod-space>
 pcf-prod-api: <pcf-prod-api>
 pcf-prod-app-suffix: <pcf-prod-app-suffix>
 pcf-prod-app-domain: <pcf-prod-app-domain>
+ufo-ip: <ufo-ip>
+apitoken: <apitoken>
+tenanthost: <tenanthost>
+github-access-token: <github-access-token>
+s3-access-key-id: <s3-access-key-id>
+s3-secret-access-key: <s3-secret-access-key>
+concourse-key: <concourse-key>
