updating pipelines to use github user+pwd, parameterize s3 bucket

--- a/ci/01-pipeline.yml
+++ b/ci/01-pipeline.yml
@@ -21,7 +21,7 @@ resources:
 - name: version
   type: semver
   source:
-    bucket: autonomous-pipeline-music-artifacts
+    bucket: ((s3-bucket-name))
     region_name: us-west-2
     key: current-version
     access_key_id: ((s3-access-key-id))
@@ -31,7 +31,7 @@ resources:
 - name: music-release
   type: s3
   source:
-    bucket: autonomous-pipeline-music-artifacts
+    bucket: ((s3-bucket-name))
     region_name: us-west-2
     regexp: spring-music-(.*).jar
     access_key_id: ((s3-access-key-id))
