--- a/ci/credentials-sample.yml
+++ b/ci/credentials-sample.yml
@@ -15,7 +15,7 @@ pcf-prod-app-domain: <pcf-prod-app-domain>
 ufo-ip: <ufo-ip>
 apitoken: <apitoken>
 tenanthost: <tenanthost>
-github-access-token: <github-access-token>
+github-username: <github-username>
+github-password: <github-password>
 s3-access-key-id: <s3-access-key-id>
 s3-secret-access-key: <s3-secret-access-key>
-concourse-key: <concourse-key>
