updating creds sample

--- a/ci/credentials-sample.yml
+++ b/ci/credentials-sample.yml
@@ -1,3 +1,4 @@
+workshopnum: workshop99
 stage-deploy-username: <stage-deploy-username>
 stage-deploy-password: <stage-deploy-password>
 pcf-stage-organization: <pcf-stage-organization>
